[metadata]
name = causeme_TFM_methods
version = 0.0.1a1
author = Manel Soler
author_email = sosanzma@alumni.uv.es
description = Methods for causal discovery
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sosanzma/causme-methods-tfm

[options]
packages = tfmmethods
python_requires = >=3.5
install_requires =
    numpy
    statsmodels
    tensorflow
    sklearn
    pandas

[options.entry_points]
causeme.methods =
    LSTM_method = tfmmethods:lstm_cause
    NN_method = tfmmethods:nn_cause2
    Elasnet_method = tfmmethods:var_elasnet
